--- a/Assets/Resources/I18n/fr.csv
+++ b/Assets/Resources/I18n/fr.csv
@@ -1,11 +1,11 @@
-mainmenu.newgame,New Game
-mainmenu.continue,Continue
+mainmenu.newgame,Nouvelle Partie
+mainmenu.continue,Continuer
 mainmenu.options,Options
-mainmenu.credits,Credits
-mainmenu.language,Language
-mainmenu.layout,Layout
-mainmenu.online,Online
-mainmenu.analyticdata,Analytic Data
+mainmenu.credits,Crédits
+mainmenu.language,Langue
+mainmenu.layout,Disposition
+mainmenu.online,En ligne
+mainmenu.analyticdata,Données d'analyse
 mainmenu.audio,Audio
 mainmenu.generalvolume,General volume
 mainmenu.musicvolume,Music volume
@@ -26,7 +26,7 @@ nextnight.fourthnight,4th Night
 nextnight.fifthnight,5th Night
 nextnight.sixthnight,6th Night
 nextnight.seventhnight,7th Night
-office.flashlight,flashlight
+office.flashlight,lampe torche
 office.useflashlight,"Press & hold <sprite name=""WiiU-A""> to use flashlight."
 camera.partyroomone,Party Room 1
 camera.partyroomtwo,Party Room 2
