fixed an italian translation

--- a/Assets/Resources/I18n/it.csv
+++ b/Assets/Resources/I18n/it.csv
@@ -14,7 +14,7 @@ mainmenu.voicevolume,Volume voci
 mainmenu.sfxvolume,Volume effetti sonori
 mainmenu.update,"È disponibile una nuova versione, scaricala su itch.io !"
 mainmenu.sharedata,Accetti al condividere data con Source Macchiato come il numero di volte che hai aperto il gioco?
-mainmenu.night,Notte Personalizzata
+mainmenu.night,Notte 
 customnight.customizenight,Personalizza la Notte
 customnight.twenty,20/20/20/20
 customnight.newandshiny,Nuovo e Lucente
